initscripts-sidux-live (0.4.1) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 23 Feb 2007 00:36:22 +0100

initscripts-sidux-live (0.4.0) unstable; urgency=low

  * Bump package version number.
  * Remove legacy splashy code from live-autoconfig.
  * Preseed locale/console-data/keymap debconf stuff earlier, before
    perofrming keymap activating steps.

 -- Kel Modderman <kel@otaku42.de>  Fri, 23 Feb 2007 08:17:37 +1000

initscripts-sidux-live (0.3.95) unstable; urgency=low

  * fix myconfig bugs once and for all.
  * /etc/modules.conf is a kernel 2.4 orphan, nuke it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Feb 2007 16:19:50 +0100

initscripts-sidux-live (0.3.94) unstable; urgency=low

  * Update handling of config and home files to clean it up and search case
    insensitively for auto/scan/find (finally remember to go back and replace
    the [kK][nN] test)
  * Fix kde and X keyboards for lang=ga

 -- Niall Walsh <niallwalsh@users.berlios.de>  Tue, 20 Feb 2007 04:37:21 +0000

initscripts-sidux-live (0.3.93) unstable; urgency=low

  * Use fuse-utils initscript to prepare fuse related stuff.

 -- Kel Modderman <kel@otaku42.de>  Wed, 14 Feb 2007 22:33:33 +1000

initscripts-sidux-live (0.3.92) unstable; urgency=low

  * Cleanup hwclock/timezone stuff
    - use /etc/init.d/hwclock.sh
    - default to localtime, make that default persist
    - no longer export TZ, cleanup shell variable usage
  * Don't clobber our calculated TZ variable.
  * Consistent use of null redirection in live-reboot.
  * Allow wpa-ifupdown to take down interfaces under wpa_supplicant's control
    before clobbering process with killall.
  * Redirect output of networking to null.

 -- Kel Modderman <kel@otaku42.de>  Mon, 12 Feb 2007 19:53:13 +1000

initscripts-sidux-live (0.3.91) unstable; urgency=low

  * Keyboard Layout fixed for xorg 

 -- Andreas Weber <andreas@it-weber.com>  Thu,  8 Feb 2007 19:23:08 +0100
