@@ -6,13 +6,10 @@ IOPORTS=/proc/ioports
 [ -f $CPUINFO ] || exit 0
 
 MODEL_NAME=$(grep '^model name' "$CPUINFO" | head -1 | sed -e 's/^.*: //;')
-CPU=$(grep -E '^cpud[^:]+:' "$CPUINFO" | head -1 | sed -e 's/^.*: //;')
 VENDOR_ID=$(grep -E '^vendor_id[^:]+:' "$CPUINFO" | head -1 | sed -e 's/^.*: //;')
 CPU_FAMILY=$(sed -e '/^cpu family/ {s/.*: //;p;Q};d' $CPUINFO)
 
 CPUFREQ=
-# We don't really need to fallback to acpi-cpufreq here, imho
-#CPUFREQ_FALLBACK=acpi-cpufreq
 
 # Two modules for PIII-M depending the chipset.
 if [ -f $IOPORTS ] && grep -q 'Intel .*ICH' $IOPORTS ; then
@@ -26,7 +23,7 @@ case "$VENDOR_ID" in
 	GenuineIntel*)
 		# If the CPU has the est flag, it supports enhanced speedstep and should
 		# use the speedstep-centrino driver
-		if [ "`grep est $CPUINFO`" ]; then
+		if grep -q est $CPUINFO; then
 			CPUFREQ=speedstep-centrino;
 		elif [ $CPU_FAMILY = 15 ]; then
 			# Right. Check if it's a P4 without est.
@@ -40,12 +37,12 @@ case "$VENDOR_ID" in
 				Intel\(R\)\ Pentium\(R\)\ III\ Mobile\ CPU*)
 					CPUFREQ=$PIII_CPUFREQ
 					;;
-		    
+				
 				# JD: says this works with   cpufreq_userspace
 				Mobile\ Intel\(R\)\ Pentium\(R\)\ III\ CPU\ -\ M*)
 					CPUFREQ=$PIII_CPUFREQ
 					;;
-		    
+				
 				# https://bugzilla.ubuntu.com/show_bug.cgi?id=4262
 				# UNCONFIRMED
 				Pentium\ III\ \(Coppermine\)*)
@@ -78,11 +75,11 @@ case "$VENDOR_ID" in
 		if [ $CPU_FAMILY = 6 ]; then
 			CPUFREQ=longhaul;
 		fi
-		;;    
+		;;
 	
 	GenuineTMx86*)
 		# Transmeta
-		if [ "`grep longrun $CPUINFO`" ]; then
+		if grep -q longrun $CPUINFO; then
 			CPUFREQ=longrun
 		fi
 		;;
