@@ -1,8 +1,13 @@
 initscripts-sidux-live (0.4.1) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 23 Feb 2007 00:36:22 +0100
+  [ Kel Modderman ]
+  * Whitespace and syntactical cleanup of cpufreq-detect.sh. Remove unused
+    variable CPU.
+
+ -- Kel Modderman <kel@otaku42.de>  Sat, 24 Feb 2007 10:05:59 +1000
 
 initscripts-sidux-live (0.4.0) unstable; urgency=low
 
